ENH: Initial commit of DICOMPetCtStudyPlugin

--- a/Py/CMakeLists.txt
+++ b/Py/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 SET(KIT_PYTHON_SCRIPTS
   qSlicerLongPETCTModuleWidget.py
+  DICOMPetCtStudyPlugin.py
   )
 
 SET(KIT_PYTHON_RESOURCES
@@ -15,3 +16,16 @@ ctkMacroCompilePythonScript(
   NO_INSTALL_SUBDIR
   )
 
+SET(KIT_PYTHON_SCRIPTS
+  DICOMPetCtStudyPlugin.py
+  )
+  
+ctkMacroCompilePythonScript(
+  TARGET_NAME DICOMPetCtStudyPlugin
+  SCRIPTS "${KIT_PYTHON_SCRIPTS}"
+  RESOURCES "${KIT_PYTHON_RESOURCES}"
+  DESTINATION_DIR ${CMAKE_BINARY_DIR}/${Slicer_QTSCRIPTEDMODULES_LIB_DIR}
+  INSTALL_DIR ${Slicer_INSTALL_QTSCRIPTEDMODULES_LIB_DIR}
+  NO_INSTALL_SUBDIR
+  )
+  
