ENH: Added SegmentationTableCellWidget

--- a/Widgets/CMakeLists.txt
+++ b/Widgets/CMakeLists.txt
@@ -20,6 +20,8 @@ set(${KIT}_SRCS
   qSlicerLongPETCTReportSelectionWidget.h
   qSlicerLongPETCTReportTableWidget.cxx
   qSlicerLongPETCTReportTableWidget.h
+  qSlicerLongPETCTSegmentationTableCellWidget.cxx
+  qSlicerLongPETCTSegmentationTableCellWidget.h
   qSlicerLongPETCTStudySelectionWidget.cxx
   qSlicerLongPETCTStudySelectionWidget.h
   qSlicerLongPETCTStudySliderWidget.cxx
@@ -33,6 +35,7 @@ set(${KIT}_MOC_SRCS
   qSlicerLongPETCTFindingSettingsDialog.h
   qSlicerLongPETCTReportSelectionWidget.h
   qSlicerLongPETCTReportTableWidget.h
+  qSlicerLongPETCTSegmentationTableCellWidget.h
   qSlicerLongPETCTStudySelectionWidget.h
   qSlicerLongPETCTStudySliderWidget.h  
   )
@@ -44,6 +47,7 @@ set(${KIT}_UI_SRCS
   ../Resources/UI/qSlicerLongPETCTFindingSelectionWidget.ui
   ../Resources/UI/qSlicerLongPETCTFindingSettingsDialog.ui
   ../Resources/UI/qSlicerLongPETCTReportSelectionWidget.ui
+  ../Resources/UI/qSlicerLongPETCTSegmentationTableCellWidget.ui
   ../Resources/UI/qSlicerLongPETCTStudySelectionWidget.ui
   ../Resources/UI/qSlicerLongPETCTStudySliderWidget.ui
   )
