--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ cmake_minimum_required(VERSION 2.8.7)
 if(NOT Slicer_SOURCE_DIR)
   set(EXTENSION_NAME LongitudinalPETCT)
   set(EXTENSION_HOMEPAGE "http://www.slicer.org/slicerWiki/index.php/Documentation/Nightly/Extensions/LongitudinalPETCT")
-  set(EXTENSION_CATEGORY "Examples")
+  set(EXTENSION_CATEGORY "Informatics")
   set(EXTENSION_CONTRIBUTORS "Paul Mercea (University of Heidelberg), Andrey Fedorov(Surgical Planning Lab)")
-  set(EXTENSION_DESCRIPTION "This is an example of extension bundling a scripted loadable module")
+  set(EXTENSION_DESCRIPTION "The purpose of the Longitudinal PET/CT Analysis module is to provide a user friendly Slicer interface for quantification of DICOM PET/CT image data by computing the standardized uptake value (SUV) based on bodyweight for different regions of interest and for different timepoints.")
   set(EXTENSION_ICONURL "http://www.slicer.org/slicerWiki/images/0/08/LongitudinalPETCTLogo.png")
   set(EXTENSION_SCREENSHOTURLS "http://www.slicer.org/slicerWiki/images/3/31/LongitudinalPETCT_Screenshot.jpg")
 endif()
@@ -64,7 +64,6 @@ set(MODULE_MOC_SRCS
   
 
 
-  
 #-----------------------------------------------------------------------------
 slicerMacroBuildQtModule(
   NAME ${MODULE_NAME}
